remove late java stuff