@@ -51,7 +51,7 @@ public class Tecton implements IActive {
      */
     public void addNeighbor(Tecton tecton) {
         Skeleton.printCall(this, List.of(tecton));
-        neighbors.addLast(tecton);
+        neighbors.add(tecton);
         Skeleton.printReturn();
     }
 
@@ -160,7 +160,7 @@ public class Tecton implements IActive {
 
     public Spore takeSpore() {
         Skeleton.printCall(this);
-        var ret = spores.isEmpty() ? null : spores.removeLast();
+        Spore ret = spores.isEmpty() ? null : spores.remove(spores.size() - 1);
         Skeleton.printReturn(ret);
         return ret;
     }
@@ -312,7 +312,8 @@ public class Tecton implements IActive {
 
     private boolean myceliumExists(Fungus fungus, Tecton t1, Tecton t2) {
         for (Mycelium m : mycelia) {
-            if (m.getSpecies() == fungus && (Arrays.equals(m.getEnds(), new Tecton[] { t1, t2 }) || Arrays.equals(m.getEnds(), new Tecton[] { t2, t1 }))) {
+            if (m.getSpecies() == fungus && (Arrays.equals(m.getEnds(), new Tecton[] { t1, t2 })
+                    || Arrays.equals(m.getEnds(), new Tecton[] { t2, t1 }))) {
                 Skeleton.printReturn(true);
                 return true;
             }
@@ -329,7 +330,9 @@ public class Tecton implements IActive {
      */
     public Mycelium growMycelium(Fungus fungus, Tecton target) {
         Skeleton.printCall(this, List.of(fungus, target));
-        if (canGrowMyceliumFrom(fungus) && target.canGrowMyceliumFrom(fungus) && neighbors.contains(target) && !myceliumExists(fungus, this, target) && ((mushroom != null && mushroom.getSpecies() == fungus) || (neighbors.stream().anyMatch(x -> myceliumExists(fungus, this, x))))) {
+        if (canGrowMyceliumFrom(fungus) && target.canGrowMyceliumFrom(fungus) && neighbors.contains(target)
+                && !myceliumExists(fungus, this, target) && ((mushroom != null && mushroom.getSpecies() == fungus)
+                        || (neighbors.stream().anyMatch(x -> myceliumExists(fungus, this, x))))) {
             Mycelium mycelium = new Mycelium(fungus, this, target);
 
             Skeleton.printReturn(mycelium);
@@ -355,7 +358,8 @@ public class Tecton implements IActive {
 
         var t1Neighbors = new ArrayList<>(neighbors.subList(0, neighbors.size() / 2));
         t1Neighbors.add(t2);
-        t1.fillWithStuff(spores.subList(0, spores.size() / 2), mushroom, insects.subList(0, insects.size() / 2), t1Neighbors);
+        t1.fillWithStuff(spores.subList(0, spores.size() / 2), mushroom, insects.subList(0, insects.size() / 2),
+                t1Neighbors);
 
         var t2Neighbors = new ArrayList<>(neighbors.subList(neighbors.size() / 2, Math.max(neighbors.size() - 1, 0)));
         t2Neighbors.add(t1);
